--- a/BookReviewsTask/Views/ReviewTableViewCell.xib
+++ b/BookReviewsTask/Views/ReviewTableViewCell.xib
@@ -1,10 +1,74 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <tableViewCell clipsSubviews="YES" contentMode="top" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="120" id="X1i-ZG-6k7" customClass="ReviewTableViewCell" customModule="BookReviewsTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X1i-ZG-6k7" id="I75-Fv-Iw4">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HWC-dV-pMr">
+                        <rect key="frame" x="26" y="21" width="80" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="IpR-gm-dov"/>
+                            <constraint firstAttribute="height" constant="80" id="bb8-VD-QW3"/>
+                        </constraints>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="96e-V5-coN">
+                        <rect key="frame" x="116" y="21" width="233" height="59"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONk-Nd-Z6r">
+                                <rect key="frame" x="0.0" y="0.0" width="233" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Headline" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Q9-1I-R4k">
+                                <rect key="frame" x="0.0" y="21" width="233" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="17" id="BZc-wd-WP3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4A-bD-Qua">
+                                <rect key="frame" x="0.0" y="42" width="233" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="96e-V5-coN" secondAttribute="trailing" constant="10" id="7hy-qX-1Mn"/>
+                    <constraint firstItem="96e-V5-coN" firstAttribute="top" secondItem="HWC-dV-pMr" secondAttribute="top" id="8Bd-MQ-0OT"/>
+                    <constraint firstItem="HWC-dV-pMr" firstAttribute="top" secondItem="I75-Fv-Iw4" secondAttribute="topMargin" constant="10" id="J3K-rj-3Q9"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="96e-V5-coN" secondAttribute="bottom" constant="10" id="Kq8-rv-5hl"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="HWC-dV-pMr" secondAttribute="bottom" constant="10" id="NyP-Z9-MQU"/>
+                    <constraint firstItem="96e-V5-coN" firstAttribute="leading" secondItem="HWC-dV-pMr" secondAttribute="trailing" constant="10" id="fHK-mN-IXU"/>
+                    <constraint firstItem="HWC-dV-pMr" firstAttribute="leading" secondItem="I75-Fv-Iw4" secondAttribute="leadingMargin" constant="10" id="q6k-gu-yi8"/>
+                </constraints>
+            </tableViewCellContentView>
+            <connections>
+                <outlet property="headlineLabel" destination="6Q9-1I-R4k" id="Ipl-bm-uV1"/>
+                <outlet property="releaseDateLabel" destination="A4A-bD-Qua" id="THG-CH-5Ma"/>
+                <outlet property="reviewImageView" destination="HWC-dV-pMr" id="FyF-OJ-jqJ"/>
+                <outlet property="titleLabel" destination="ONk-Nd-Z6r" id="L5T-qM-7oK"/>
+            </connections>
+            <point key="canvasLocation" x="12" y="-83.658170914542737"/>
+        </tableViewCell>
     </objects>
 </document>
